# mcp-policy-gateway

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  go.mod  pyproject.toml  requirements.txt
app/: __init__.py  server.py
cli/: main.py
cmd/mcpgw/: main.go
examples/: gateway-policy.json
pkg/: __init__.py
pkg/api/: routes.py
pkg/audit/: audit.go
pkg/models/: __init__.py  gateway.py
pkg/policy/: __init__.py  client.py  policy.go  policy_test.go
pkg/proxy/: __init__.py  interceptor.py  proxy.go  proxy_test.go
pkg/ratelimit/: ratelimit.go  ratelimit_test.go
tests/: __init__.py  conftest.py  test_api.py  test_interceptor.py  test_models.py
